@@ -1,5 +1,14 @@
 2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
+	* src/pdk/ralloc2.cc,
+	  src/stm8/ralloc2.cc,
+	  src/z80/ralloc2.cc,
+	  support/regression/tests/gcc-torture-execute-20050713-1.c,
+	  support/regression/tests/gcc-torture-execute-920625-1.c:
+	  Fix a register allocation issue affecting calls to functions with multiple struct parameters.
+
+2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
+
 	* src/SDCC.y,
 	  src/SDCCcse.c,
 	  src/SDCCicode.c,
